infrastructure/kubernetes/orders-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: ClusterIP
  selector:
    app: orders-service
  ports:
  - name: http
    port: 3000
    targetPort: 3001
